[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Modules/DrillModule.gd" type="Script" id=1]
[ext_resource path="res://res/modules.png" type="Texture" id=2]
[ext_resource path="res://Entities/Modules/Machine.gd" type="Script" id=3]
[ext_resource path="res://Entities/Modules/DPadModule.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Modules/EmptyModule.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Modules/MachineMovement.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Move"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.12, 0.89866, 1, -0.76, 0.0535369, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.12, 0.899, 1, -0.76, 0.0535369, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Machine" type="Node2D"]
script = ExtResource( 3 )

[node name="Movement" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="Movement"]

[node name="Base" type="Node2D" parent="."]

[node name="DPadModule" parent="Base" instance=ExtResource( 4 )]

[node name="Modules" type="Node2D" parent="."]

[node name="EmptyModule" parent="Modules" instance=ExtResource( 5 )]

[node name="EmptyModule2" parent="Modules" instance=ExtResource( 5 )]
position = Vector2( 32, 32 )

[node name="DrillModule" type="Node2D" parent="."]
position = Vector2( 64, 32 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="DrillModule"]

[node name="Anim" type="AnimationPlayer" parent="DrillModule"]
anims/Move = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="DrillModule"]
position = Vector2( 16, 16 )
texture = ExtResource( 2 )
hframes = 8
vframes = 6
frame = 16
